--- a/sergio.html
+++ b/sergio.html
@@ -3,14 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document.sex</title>
+    <style> 
+        body{
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            box-sizing: border-box;
+        }
+        nav{
+            background-color: grey;
+            padding: 1rem;
+        }
+        nav ul{
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+        }
+        nav li{
+            margin: 0 1rem;
+
+        }
+        nav a{
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.2;
+            padding: 0.5rem 1 rem;
+            transition: bacground-color 0.3s ease;
+        }
+        nav a:hover{
+        background-color: #555;
+        border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html"></a>Inicio</li>
-            <li><a href="sergio.html"></a>Sergio</li>
-            <li><a href="juan.html"></a>Juan</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sergio.html">Sergio</a></li>
+            <li><a href="juan.html">Juan</a></li>
         </ul>
     </nav>
 </body>
