--- a/index.html
+++ b/index.html
@@ -4,59 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            margin: 0;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            box-sizing: border-box;
-        }
-        nav{
-            background-color: gray;
-            padding: 1rem;
-        }
-        nav ul{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-        nav li{
-            margin: 0 1rem;
-        }
-        nav a{
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.2rem;
-            padding: 0.5rem 1rem;
-            transition: bacground-color 0.3s ease;
-        }
-        nav a:hover{
-            background-color: #555;
-            border-radius: 5px;
-        }
-        @media(max-width:600px){
-            nav ul{
-                flex-direction: column;
-                align-items: flex-start;
-            };
-            nav li{
-                margin: 0.5rem 0;
-                width: 100%;
-                text-align: left;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
+    <header>
+        <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="sergio.html">Sergio</a></li>
             <li><a href="juan.html">Juan</a></li>
         </ul>
     </nav>
+    <div class="contenedorImagen">
+        <img src="img/arbol.jpg" alt="Imagen de ejemplo" width="700px">
+    </div>
+    </header>
+    <article>
+        <div id="contenedorPrincipal">
+            
+        </div>
+    </article>
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
