--- a/sergio.html
+++ b/sergio.html
@@ -48,10 +48,31 @@
                 margin: 0.5rem 0;
                 width: 100%;
                 text-align: left;
-            }}
+            }
+
+        }
+       .contenedorimagen{ 
+        width: 100%;
+        max-width: 124px;
+        margin: 0 auto;
+        display: block;
+       }
+       #contenedorprincipal{
+        padding: 1rem;
+        max-width: 1024px;
+        margin: 2rem;
+        padding: 2rem;
+        border: 1rem;
+        border-radius: 10px;
+        border-color: purple;
+        border-style: solid;
+        box-shadow: 5px 5px 21px rgba(0, 0, 0, 0.76);
+        background-image: url('img/city.jpg');
+       }
     </style>
 </head>
 <body>
+    <header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -59,5 +80,15 @@
             <li><a href="juan.html">Juan</a></li>
         </ul>
     </nav>
+    <div class="contenedorimagen">
+        <img src="img/arbol.jpg" alt="arbol">
+    </div>
+    </header>
+    <article>
+        <div id="contenedorprincipal">
+            <h1></h1>
+
+        </div>
+    </article>
 </body>
 </html>
